魚が全部いなくなるとクリア画面に飛ぶ

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,10 @@ Thumbs.db
 gamejam/Library/
 ProjectSettings/
 UserSettings/
+gamejam/Logs/ApiUpdaterCheck.txt
+gamejam/obj/Debug/.NETFramework,Version=v4.7.1.AssemblyAttributes.cs
+gamejam/Temp/ApiUpdater_CheckMovedFrom4dbe965b40d029d4e87ff8da2beea450
+gamejam/Temp/ApiUpdater_CheckMovedFrom97580e89c5056e047b92466411346eb5
+gamejam/Temp/Assembly-CSharp.dll.hash
+gamejam/Temp/CompilationLog.txt
+gamejam/Temp/
